@@ -32,6 +32,9 @@ Release 0.9.1 - unreleased
 
   BUG FIXES
 
+    TAJO-1150: Some weird methods in QueryClientImpl should be fixed. 
+    (Jongyoung Park via hyunsik)
+
     TAJO-1139: ExternalSortExec should delete the intermediate files. 
     (jinho via hyunsik)
 
